--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,28 +1,26 @@
+# > QuantumultX配置 By Matrix3
 [general]
-# > 网络检查
-network_check_url=http://www.apple.com
-
 # > 服务器检查
 server_check_url=http://cp.cloudflare.com/generate_204
 
 # > 服务器检查超时
 server_check_timeout=3000
 
-# > 运行模式触发
-# running_mode_trigger=filter, filter, Wi-Fi1:all_proxy, Wi-Fi2:all_direct
-
-# > 排除路线
-excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
-
 # > 配置文件图标
 profile_img_url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix-icon/Matrix/A-008.JPG
+
+# > 运行模式触发
+# running_mode_trigger=filter, filter, Wi-Fi-1:all_proxy, Wi-Fi-2:all_direct
+
+# > 地理位置检查(二选一)
+# geo_location_checker=disabled
+geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/crossutility/Quantumult-X/master/sample-location-with-script.js
 
 # > 资源解析器
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
-# > 地理位置检查(二选一)
-# geo_location_checker=disabled
-geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Script/IP-location.Js
+# > 排除路线
+excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
 
 # > DNS排除列表
 dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
@@ -38,13 +36,9 @@ udp_drop_list=443
 no-system
 no-ipv6
 
-# > DNS over HTTP/3
-# prefer-doh3
-
 # > 自定义 DNS 服务器
 server=223.5.5.5
 server=119.29.29.29
-server=114.114.114.114
 
 # > 自定义 DoH 服务器
 # doh-server=https://dns.alidns.com/dns-query, https://doh.pub/dns-query
@@ -54,43 +48,40 @@ server=114.114.114.114
 
 [policy]
 # > 苹果服务
-static=苹果服务, direct, proxy, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple_2.png
-
-# > OpenAI
-static=Open-AI, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix-icon/Color/OpenAI-1.png
+static=苹果服务, direct, proxy, 自动选择, 香港节点, 台湾节点, 日本节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 
 # > 港台番剧
-static=港台番剧, direct, proxy, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
+static=港台番剧, direct, proxy, 自动选择, 香港节点, 台湾节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
+
+# > 国内影视
+static=国内影视, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingCN.png
 
 # > 国际媒体
-static=国际媒体, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
+static=国际媒体, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
 
 # > 全球加速
-static=全球加速, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
+static=全球加速, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
 
 # > 黑白名单
-static=黑白名单, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
+static=黑白名单, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 # > 自动选择
-url-latency-benchmark=自动选择, server-tag-regex=^(.(?!(网易|Netease)))*$, check-interval=3600, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/CN.png
+url-latency-benchmark=自动选择, server-tag-regex=^, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/CN.png
 
 # > 香港节点
-url-latency-benchmark=香港节点, server-tag-regex=(?=.*(香港|港|HK|(?i)HongKong))^((?!(台湾|日本|韩国|新加坡|美国)).)*$, check-interval=3600, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+url-latency-benchmark=香港节点, server-tag-regex=香港|港|HK|(?i)HongKong, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
 
 # > 台湾节点
-url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台湾|台|TW|(?i)Taiwan))^((?!(香港|日本|韩国|新加坡|美国)).)*$, check-interval=3600, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+url-latency-benchmark=台湾节点, server-tag-regex=台湾|台|TW|(?i)Taiwan, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
 
 # > 日本节点
-url-latency-benchmark=日本节点, server-tag-regex=(?=.*(日本|日|JP|(?i)Japan))^((?!(香港|台湾|韩国|新加坡|美国)).)*$, check-interval=3600, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-
-# > 韩国节点
-url-latency-benchmark=韩国节点, server-tag-regex=(?=.*(韩国|韩|KR|(?i)SouthKorea))^((?!(香港|台湾|日本|新加坡|美国)).)*$, check-interval=3600, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+url-latency-benchmark=日本节点, server-tag-regex=日本|日|JP|(?i)Japan, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
 
 # > 狮城节点
-url-latency-benchmark=狮城节点, server-tag-regex=(?=.*(新加坡|狮|SG|(?i)Singapore))^((?!(香港|台湾|日本|韩国|美国)).)*$, check-interval=3600, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+url-latency-benchmark=狮城节点, server-tag-regex=新加坡|狮|SG|(?i)Singapore, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 
 # > 美国节点
-url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美国|美|US|(?i)UnitedStates))^((?!(香港|台湾|日本|韩国|新加坡)).)*$, check-interval=3600, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+url-latency-benchmark=美国节点, server-tag-regex=美国|美|US|(?i)UnitedStates, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 
 [server_local]
 # > 本地服务器
@@ -109,11 +100,11 @@ https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule
 # > 广告拦截
 https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
 
-# > 微信直连
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/WeChat.list, tag=微信直连, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
+# > 微信消息
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/WeChat.list, tag=微信消息, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
 
-# > OpenAI
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/OpenAI.list, tag=Open-AI, force-policy=Open-AI, update-interval=172800, opt-parser=true, enabled=true
+# > OPENAI
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/OpenAI.list, tag=OPEN-AI, force-policy=美国节点, update-interval=172800, opt-parser=true, enabled=true
 
 # > 国际抖音
 https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/TikTok.list, tag=国际抖音, force-policy=国际媒体, update-interval=172800, opt-parser=true, enabled=true
@@ -124,27 +115,35 @@ https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule
 # > 港台番剧
 https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingSE.list, tag=港台番剧, force-policy=港台番剧, update-interval=172800, opt-parser=true, enabled=true
 
+# > 国内抖音
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/DouYin.list, tag=国内抖音, force-policy=国内影视, update-interval=172800, opt-parser=true, enabled=true
+
+# > 国内影视
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingCN.list, tag=国内影视, force-policy=国内影视, update-interval=172800, opt-parser=true, enabled=true
+
 # > 全球加速
 https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Global.list, tag=全球加速, force-policy=全球加速, update-interval=172800, opt-parser=true, enabled=true
 
 # > 苹果服务
 https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Apple.list, tag=苹果服务, force-policy=苹果服务, update-interval=172800, opt-parser=true, enabled=true
 
-# > 局部域网
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/LAN.list, tag=局部域网, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
+# > 局域网络
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/LAN.list, tag=局域网络, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
 
 # > 国内规则
 https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/GeoIPCN.list, tag=国内规则, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
 
 [rewrite_local]
-# > Sub-Store
-^https?:\/\/sub\.store\/((download)|api\/(preview|sync|(utils\/node-info))) url script-analyze-echo-response https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-1.min.js
-^https?:\/\/sub\.store url script-analyze-echo-response https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-0.min.js
-
 # > TF限制解除
 ^https?:\/\/testflight\.apple\.com\/v\d\/accounts\/.+?\/install$ url script-request-body https://github.com/Centralmatrix3/Scripts-Rules/raw/Master/QuantumultX/Script/TF-Download.Js
 
 [rewrite_remote]
+# > Sub-Store
+https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/QX.snippet, tag=Sub-Store, update-interval=172800, opt-parser=false, enabled=true
+
+# > BoxJs商店
+https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs商店, update-interval=172800, opt-parser=false, enabled=true
+
 # > 抖音免拔卡
 https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/TikTok-TW.conf, tag=抖音免拔卡, update-interval=172800, opt-parser=false, enabled=true
 
@@ -172,9 +171,6 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/Qu
 # > 爬虫重定向
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Redirect/Redirect.conf, tag=爬虫重定向, update-interval=172800, opt-parser=false, enabled=true
 
-# > BoxJs商店
-https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs商店, update-interval=172800, opt-parser=false, enabled=true
-
 [task_local]
 # > 媒体解锁查询
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/streaming-ui-check.js, tag=媒体解锁查询, img-url=play.circle.system, enabled=true
@@ -182,8 +178,8 @@ event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/
 # > 策略流量查询
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/traffic-check.js, tag=策略流量查询, img-url=arrow.up.arrow.down.circle.system, enabled=true
 
-# > 节点信息查询
-event-interaction https://api.343.re/freedom/rule/quanx/script/ipinfo.js, tag=节点信息查询, img-url=star.circle.system, enabled=true
+# > 地理位置查询
+event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/geo_location.js, tag=地理位置查询, img-url=location.circle.system, enabled=true
 
 # > 谷歌送中查询
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/switch-check-google.js, tag=谷歌送中查询, img-url=drop.circle.system, enabled=true
@@ -198,8 +194,8 @@ https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, host=b
 
 [mitm]
 # > 生成证书会在生成对应信息PASSPHRASE和P12
-# passphrase = 
-# p12 = 
+# passphrase=
+# p12=
 
 # > 跳过验证证书
 skip_validating_cert=false
@@ -208,4 +204,4 @@ skip_validating_cert=false
 force_sni_domain_name=false
 
 # > HOSTNAME是主机名多个主机名用英文逗号分隔
-hostname=-consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com, sub.store, testflight.apple.com
+hostname=-consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com, testflight.apple.com
