--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,5 +1,5 @@
 # > Quantumult-X 懒人配置 Author:Matrix3
-# > 更新时间:2023-04-16 14:10 UTC/GMT +8
+# > 更新时间:2023-04-16 14:14 UTC/GMT +8
 [general]
 # > 服务器检查
 server_check_url=http://www.gstatic.com/generate_204
@@ -81,7 +81,7 @@ url-latency-benchmark=日本节点, server-tag-regex=日本|日|JP|(?i)Japan, ch
 url-latency-benchmark=狮城节点, server-tag-regex=新加坡|狮|SG|(?i)Singapore, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 
 # > 美国节点
-url-latency-benchmark=美国节点, server-tag-regex=美国|美|US|(?i)UnitedStates, check-interval=1800, tolerance=60, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+url-latency-benchmark=美国节点, server-tag-regex=美国|美|US|(?i)UnitedStates, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 
 [server_local]
 # > 服务器_本地
@@ -91,7 +91,7 @@ url-latency-benchmark=美国节点, server-tag-regex=美国|美|US|(?i)UnitedSta
 
 [filter_local]
 # > 最终规则
-Final, 黑白名单
+FINAL, 黑白名单
 
 [filter_remote]
 # > 规则修正
